[tool.poetry]
name = "pyelectronicsawfence"
version = "0.1.0"
description = ""
authors = ["Andy Alexander <code@homeemail.me.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bumpversion = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
