[tool.poetry]
name = "pyelectronicsawfence"
version = "0.1.0"
description = ""
authors = ["Andy Alexander <code@homeemail.me.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bumpversion = "^0.6.0"
tk = "^0.1.0"
"rpi.gpio" = {version = "^0.7.1", markers = "sys_platform == 'linux'"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
